Fixed nav bar dropdown, attempted fix on scrolling behavior on mobile for marker events

--- a/projects/headnav.css
+++ b/projects/headnav.css
@@ -117,8 +117,8 @@ body {
   background-color: #3b3b3b;
   display: flex;
   align-items: center;
-  width: 300px;
-  height:20px;
+  max-width: 300px;
+  height: 20px;
   border-radius: 15px;
   border: 2px solid white;
   color: white;
@@ -126,7 +126,6 @@ body {
   padding-bottom: 30px;
   padding-left: 7px;
   margin: 50px;
-  background-color: #3b3b3b ;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
   transform: translateX(105%);
@@ -135,7 +134,7 @@ body {
 }
 
 .projects-button:hover {
-  transform: translateX(50%);
+  transform: translateX(40%);
 }
 
 .dropdown {
@@ -146,7 +145,7 @@ body {
   display: none;
   position: absolute;
   top: -50%;
-  right: 100%;
+  right: 80%;
   background-color: #3b3b3b;
   border-radius: 15px;
   border: 2px solid white;
@@ -165,8 +164,8 @@ body {
 
 .dropdown-content a {
   color: white;
-  padding: 12px;
   text-decoration: none;
+  padding: 12px;
   display: block;
   white-space: nowrap;
 }
